--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,25 @@ body {
     background-color: #2a607c;
     color: #ffffff;
     overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navigation ul {
+    list-style-type: disc;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.navigation li {
+    margin-left: 50px;
+}
+
+.navigation a {
+    color: #ffffff;
+    text-decoration: aqua;
 }
 
 .header h1 {
@@ -35,6 +54,8 @@ body {
 
 .header div ul {
     list-style-type: none;
+    display: flex;
+    justify-content: center;
 }
 
 .header div ul li {
@@ -52,7 +73,7 @@ p {
 }
 
 .hero {
-    height: 800px;
+    height: 600px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -62,70 +83,39 @@ p {
 
 .float-left {
     float: left;
-    margin-right: 25px;
+    margin-right: 20px;
 }
 
 .float-right {
     float: right;
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
 .content {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 5px;
 }
 
 .benefits {
-    margin-right: 20px;
+    margin-left: 20px;
     padding: 20px;
     clear: both;
-    float: right;
+    float: left;
     width: 20%;
     height: 100%;
     background-color: #2589bd;
 }
 
 .benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit {
-    margin-bottom: 32px;
+    margin-bottom: 30px;
     color: #ffffff;
 }
 
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
-}
-
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
 }
 
 .benefit img {
@@ -142,47 +132,13 @@ p {
     color: #ffffff;
 }
 
-.service {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.service {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
 .service img {
-    max-height: 200px;
-}
-
-.service img {
-    max-height: 200px;
-}
-
-.service img {
-    max-height: 200px;
+    max-height: 220px;
 }
 
 .service h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.service h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.service h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+    margin-bottom: 30px;
+    font-size: 40px;
 }
 
 .footer {
@@ -192,5 +148,6 @@ p {
 }
 
 .footer h2 {
-    font-size: 20px;
+    font-size: 10px;
 }
+
